/*
 * Copyright (c) Huawei Technologies Co., Ltd. 2021-2021. All rights reserved.
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.lubanops.apm.plugin.servermonitor.entity1";

message ServerMonitoringCollection {
  repeated ServerMonitorMetric metric = 1;
  string service = 2;
  string serviceInstance = 3;
  int32 copy = 4;
  string labelMetricValue = 5;
}

message ServerMonitorMetric {
  int64 time = 1;
  CpuMetric cpu = 2;
  repeated DiskMetric disks = 3;
  NetworkMetric netWork = 4;
  MemoryMetric memory = 5;
  repeated IBMMemoryPool ibmMemoryPools = 6;
}

message CpuMetric {
  int32 idlePercentage = 1;
  int32 ioWaitPercentage = 2;
  int32 sysPercentage = 3;
  int32 userPercentage = 4;
}

message DiskMetric {
  string diskName = 1;
  int64 readBytesPerSec = 2;
  int64 writeBytesPerSec = 3;
  double ioSpentPercentage = 4;
}

message NetworkMetric {
  int64 readBytesPerSec = 1;
  int64 writeBytesPerSec = 2;
  int64 readPackagesPerSec = 3;
  int64 writePackagesPerSec = 4;
}

message MemoryMetric {
  int64 memoryTotal = 1;
  int64 swapCached = 2;
  int64 cached = 3;
  int64 buffers = 4;
  int64 memoryUsed = 5;
}

message IBMMemoryPool {
  IBMPoolType type = 1;
  int64 init = 2;
  int64 max = 3;
  int64 used = 4;
  int64 committed = 5;
  int64 timeBucket = 6;
}

enum IBMPoolType {
  IBM_CODE_CACHE_USAGE = 0;
  IBM_DATA_CACHE_USAGE = 1;
  IBM_TENURED_SOA_USAGE = 2;
  IBM_TENURED_LOA_USAGE = 3;
  IBM_NURSERY_ALLOCATE_USAGE = 4;
  IBM_NURSERY_SURVIVOR_USAGE = 5;
  IBM_CLASS_STORAGE_USAGE = 6;
  IBM_MISCELLANEOUS_USAGE = 7;
}
